# wasmonandroid

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  settings.gradle
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/jp/co/iijii/wasmonandroid/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: wasi-hello.wasm
android/app/src/main/java/jp/co/iijii/wasmonandroid/: Handle.kt  LogInit.kt  MainActivity.kt  NativeArray.kt  NativePointer.kt  NullHandle.kt  OutTextViewHandle.kt  RustGreetings.java  RustGreetings.kt  WasmException.kt  Wasmer.kt
android/app/src/main/java/jp/co/iijii/wasmonandroid/wasi/: Ciovec.kt  Errno.kt  Fdflags.kt  Filestat.kt  Filetype.kt  FsEntry.kt  I8ArrayWriter.kt  InodeValue.kt  OpenInode.kt  PreopenDirectory.kt  Preopentype.kt  Prestat.kt  PrestatDir.kt  PrestatU.kt  Rights.kt  SizePointer.kt  Types.kt  WasiByteArray.kt  (+5 more)
android/app/src/main/jniLibs/: .gitignore
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: ids.xml  strings.xml
android/app/src/test/java/jp/co/iijii/wasmonandroid/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/jp/co/iijii/wasmonandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jp/co/iijii/wasmonandroid/: ExampleUnitTest.kt
cargo/: Cargo.toml
cargo/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
