[package]
name = "greeting"
version = "0.1.0"
authors = ["Yuji Yamamoto <yuji-yamamoto@iij.ad.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.13.1", default-features = false }

[lib]
crate-type = ["dylib"]
