[package]
name = "greeting"
version = "0.1.0"
authors = ["Yuji Yamamoto <yuji-yamamoto@iij.ad.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.14.0", default-features = false }
wasmtime-api = { version = "0.3.0" }
android_logger = "0.8.6"

[lib]
crate-type = ["dylib"]
